--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.10.2",
     "@types/node": "25.0.2",
     "@types/react": "19.2.7",
     "typescript": "5.9.3"
